<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_annuler"
        android:icon="@drawable/fontisto__arrow_return_left"
        android:title="@string/action_annuler"
        app:iconTint="#FFFFFF"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refaire"
        android:icon="@drawable/fontisto__arrow_return_right"
        android:title="@string/action_refaire"
        app:iconTint="#FFFFFF"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_enregistrer"
        android:icon="@drawable/symbols__download_save"
        android:title="@string/action_troisieme"
        app:iconTint="#FFFFFF"
        app:showAsAction="always" />

</menu>