<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tiroir"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contenu principal de l'écran -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BCBCBC"
        tools:context=".MainActivity">

        <!-- Barre du haut avec l'icône du menu burger -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/barre_outils"
            android:layout_width="410dp"
            android:layout_height="59dp"
            android:background="#615F5F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu_rounded"
            app:navigationIconTint="#FFFFFF"
            app:title="@string/app_name"
            app:titleTextColor="#BCBCBC" />

        <!-- Liste défilante : les lignes viennent de item_note.xml (via un adapter) -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/liste_notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="88dp"
            app:layout_constraintTop_toBottomOf="@id/barre_outils"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_note" />

        <!-- Message affiché seulement quand il n'y a aucune note -->

        <!-- Bouton de création, en bas à droite -->

        <TextView
            android:id="@+id/texte_aucune_note"
            android:layout_width="4dp"
            android:layout_height="6dp"
            android:text="@string/message_aucune_note"
            android:textColor="#615F5F"
            android:textSize="9sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bouton_nouvelle_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/description_bouton_nouvelle_note"
            app:backgroundTint="#615F5F"
            app:srcCompat="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tiroir du menu burger : doit venir apres le contenu principal -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/vue_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#000000"
        app:itemTextColor="#BCBCBC"
        app:itemIconTint="#BCBCBC"
        app:menu="@menu/menu_burger" />

</androidx.drawerlayout.widget.DrawerLayout>